# histoseg-plugin

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
configs/: embedding.yaml  storage.yaml  tiling.yaml
configs/tiling/: default.yaml  default_new.yaml
configs/tiling/presets/: biopsy.yaml  high_quality.yaml
configs/tiling_presets/: high_quality.yaml  resection.yaml  tcga.yaml
scripts/: demo.py  param_demo.py
src/histoseg_plugin/: __init__.py
src/histoseg_plugin/embedding/: _torch_utils.py  datasets.py  encoders.py  extract_features.py  test_handles_workers.py
src/histoseg_plugin/models/: hub.py
src/histoseg_plugin/models/builtin/test_resnet50/: load.py  model.yaml
src/histoseg_plugin/storage/: api.py  config.py  embedding_store.py  factory.py  fs_writer.py  h5_store.py  interfaces.py  specs.py  tiling_store.py  tiling_writer.py
src/histoseg_plugin/storage/embedding/: h5_embedding_store.py
src/histoseg_plugin/storage/tiling/: base.py  h5_tiling_store.py  json_tiling_store.py
src/histoseg_plugin/tile_prediction/: datasets.py  predict.py
src/histoseg_plugin/tiling/: WholeSlideImage.py  __init__.py  config_loader.py  config_ops.py  contour_checker.py  contour_proc_to_delete.py  contour_utils.py  contours_processing.py  create_patches.py  file_utils.py  parameter_dataclass_do_delete.py  parameter_manager.py  parameter_models.py  process_wsi.py  segmentation.py  visualization.py  wsi_utils.py  wsi_utils_old.py
src/histoseg_plugin/tiling/jobs/: domain.py  exceptions.py  factory.py  inspector.py  process_wsi.py  run_options.py  runner.py  store.py
src/histoseg_plugin/utils/: h5_utils.py
src/histoseg_plugin/wsi_core/: annotations.py  contour_checker.py  geometry.py  patch_sampling.py  segmentation.py  stitch.py  visualization.py
tests/: README.md  __init__.py  test_config_and_mpp_selection.py
