[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histoseg-plugin"
version = "0.1.0"
description = "A FastAPI core for histopathology pipelines with pluggable viewer adapters"
requires-python = ">=3.9"
dependencies = [
    "fastapi", 
    "uvicorn[standard]", 
    "pydantic>=2,<3", 
    "numpy",
    "click",
    "tqdm",
    "opencv-python",
    "openslide-python",
    "pillow",
    "h5py",
    "matplotlib",
    "pyyaml",
]

[project.scripts]
histoseg-process = "histoseg_plugin.tiling.create_patches:main"
histoseg-params = "histoseg_plugin.tiling.param_cli:params"

[tool.setuptools.packages.find]
where = ["src"]
