[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histoseg-plugin"
version = "0.1.0"
description = "A FastAPI core for histopathology pipelines with pluggable viewer adapters"
requires-python = ">=3.9"
dependencies = [
    "fastapi", 
    "uvicorn[standard]", 
    "pydantic>=2,<3", 
    "numpy",
    "click",
    "tqdm",
    "opencv-python",
    "openslide-python",
    "openslide-bin",
    "pillow",
    "h5py",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
]
# Quickstart on CPU (works on Linux/macOS/Windows via PyPI)
embed-cpu = [
    "torch==2.4.*",
    "torchvision==0.19.*",
    "torchaudio==2.4.*",
    # (add other embed libs that are torch-agnostic here too, e.g., "einops")
]

[project.scripts]
histoseg-tile = "histoseg_plugin.tiling.create_patches:main"
histoseg-embed = "histoseg_plugin.embedding.extract_features:main"

[project.entry-points."histoseg_plugin.models"]
test_resnet50 = "histoseg_plugin.models.builtin.test_resnet50.load:load"

[tool.setuptools.packages.find]
where = ["src"]
